# parallel-raytracer

./: CMakeLists.txt  Dockerfile  Error.cpp  Error.hpp  Fragment.glsl  FullscreenQuad.cpp  FullscreenQuad.hpp  Input.cpp  Input.hpp  Main.cpp  Master.cpp  Master.hpp  MessageType.hpp  README.md  Raytracer.cpp  Raytracer.hpp  STATS.md  Shaders.cpp  Shaders.hpp  Singleton.hpp  Slave.cpp  Slave.hpp  Texture.cpp  Texture.hpp  Vertex.glsl  Window.cpp  Window.hpp  conanbuildinfo.cmake  conanfile.txt  conaninfo.txt
